# marknotes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ShortcutsModal.tsx  UpdateChecker.tsx  theme-provider.tsx
src/components/editor/: Editor.tsx
src/components/preview/: Preview.tsx
src/components/sidebar/: Sidebar.tsx
src/components/titlebar/: Titlebar.tsx
src/components/ui/: dialog.tsx  dropdown-menu.tsx
src/lib/: path.ts  tauri.ts
src/store/: notes.ts
src/tools/notes/: store.ts
src/tools/notes/editor/: Editor.tsx
src/tools/notes/preview/: Preview.tsx
src/tools/notes/sidebar/: NoteItem.tsx  Sidebar.tsx
