[package]
name = "marknotes"
version = "1.0.2"
description = "A professional markdown notes app"
authors = []
edition = "2021"

[lib]
name = "marknotes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "marknotes"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
